--- a/SamPartyApp/index.html
+++ b/SamPartyApp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="\assets\images\samspartygames.png" />
+    <link rel="icon" type="image/png" href="/assets/images/samspartygames.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's Party Games</title>
   </head>
